--- a/index.html
+++ b/index.html
@@ -69,6 +69,17 @@
                 <canvas id="chart" width="900" height="420" aria-label="Scatter plot"></canvas>
             </div>
         </div>
+
+        <!-- Panel de pruebas de validación -->
+        <div class="panel">
+            <h2 class="panel-title">Pruebas de validación</h2>
+            <div id="tests-summary" class="tests-summary">
+                <!-- JS escribirá aquí los resultados -->
+            </div>
+            <div class="btns" style="margin-top:8px">
+                <button type="button" id="btnRegenerar" disabled>Regenerar números</button>
+            </div>
+        </div>
     </div>
 
     <script src="app.js"></script>
