cambios para nuevas pruebas

--- a/index.html
+++ b/index.html
@@ -72,7 +72,7 @@
 
         <!-- Panel de pruebas de validación -->
         <div class="panel">
-            <h2 class="panel-title">Pruebas de validación</h2>
+            <h2 class="panel-title">Pruebas estadísticas del generador (95% de confianza)</h2>
             <div id="tests-summary" class="tests-summary">
                 <!-- JS escribirá aquí los resultados -->
             </div>
